# reliability-of-phonetic-compounds

./: Cargo.toml  README.md
data/: jyutping_rime.tsv  merged_common_characters.txt  phonetics_diff.tsv  phonetics_diff_edge_cases.xlsx  phonetics_simplified.tsv  phonetics_trad_false_negative.txt  phonetics_trad_false_positive.txt  phonetics_traditional.tsv  pinyin.csv  qxk_char_info.json  trad_to_simp.tsv
data-raw/: pinyin_with_tone_marks.csv  pinyin_现代汉语规范字典.csv  trad_to_simp.tsv
results/simplified/: jyutping_lshk_classes.txt  jyutping_lshk_stats.txt  jyutping_rime_classes.txt  jyutping_rime_stats.txt  overview_stats.txt  phonetic_classes.txt  pinyin_classes.txt  pinyin_stats.txt
results/traditional/: jyutping_lshk_classes.txt  jyutping_lshk_stats.txt  jyutping_rime_classes.txt  jyutping_rime_stats.txt  overview_stats.txt  phonetic_classes.txt  pinyin_classes.txt  pinyin_stats.txt
src/: calculate_phonetics_stats.rs  compare_phonetics.rs  extract_qxk_errors.rs  fix_phonetics_data.rs  generate_merged_common_chars.rs  lib.rs  main.rs  scrape_phonetics_info.rs
